Implement API: config, get temp, get temp stream
